--- a/Courses/index.html
+++ b/Courses/index.html
@@ -57,7 +57,6 @@
             Your single-stop solution for all UG NEP semester results. Select your semester to get started.
         </p>
         
-        <!-- Semester Selection and Promotion -->
         <div class="flex flex-col md:flex-row items-center justify-between mb-8 space-y-4 md:space-y-0 md:space-x-6">
             <div class="w-full md:w-1/2">
                 <label for="semesterSelect" class="block text-gray-700 font-bold mb-2">Select Your Semester:</label>
@@ -76,23 +75,20 @@
             </a>
         </div>
 
-        <!-- Courses Table -->
-        <div class="overflow-x-auto relative shadow-xl rounded-2xl">
-            <table class="w-full text-sm text-left text-gray-600">
+        <div class="shadow-xl rounded-2xl w-full">
+            <table class="w-full text-sm text-left text-gray-600 table-auto">
                 <thead class="text-xs text-gray-800 uppercase bg-blue-100 border-b-2 border-blue-200">
                     <tr>
-                        <th scope="col" class="py-4 px-6">S.NO.</th>
-                        <th scope="col" class="py-4 px-6">Courses</th>
-                        <th scope="col" class="py-4 px-6">Actions</th>
+                        <th scope="col" class="py-4 px-2 sm:px-4 md:px-6">S.NO.</th>
+                        <th scope="col" class="py-4 px-2 sm:px-4 md:px-6">Courses</th>
+                        <th scope="col" class="py-4 px-2 sm:px-4 md:px-6 text-right">Actions</th>
                     </tr>
                 </thead>
                 <tbody id="tableBody">
-                    <!-- Table rows populated by JavaScript -->
-                </tbody>
+                    </tbody>
             </table>
         </div>
 
-        <!-- Contact Information -->
         <div class="mt-10 text-center text-gray-700">
             <p class="text-lg font-medium mb-4">
                 For any confusion or problems, contact me:
@@ -114,7 +110,6 @@
         </div>
     </div>
 
-    <!-- Modal for Roll No. Input -->
     <div id="resultModal" class="modal">
         <div class="modal-content">
             <h2 class="text-2xl font-bold mb-4 text-gray-800">Enter Student Roll No.</h2>
@@ -233,8 +228,17 @@
                 return;
             }
 
-            // Constructing the URL based on the provided logic
-            const rollNoBase = rollNo.slice(0, 12) + '01';
+            // Determine the semester suffix based on the selected semester
+            const semesterSuffixes = {
+                'first': '01',
+                'second': '02',
+                'third': '03',
+                'fourth': '04',
+                'fifth': '05',
+                'sixth': '06'
+            };
+            const semesterSuffix = semesterSuffixes[currentSemester];
+            const rollNoBase = rollNo.slice(0, 12) + semesterSuffix;
             const rollNoBaseEncoded = base64Encode(rollNoBase);
 
             let encodedPart = '';
