--- a/Pages/result_page.html
+++ b/Pages/result_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Results</title>
+  <title>RMLAU Students Rank wise Results</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -29,13 +29,15 @@
     .close:hover {color:white;}
     .share-btn{background:linear-gradient(135deg,#10b981 0%,#059669 100%);padding:0.75rem 1.5rem;border-radius:0.75rem;transition:0.3s;}
     .share-btn:hover{background:linear-gradient(135deg,#059669 0%,#047857 100%);transform:translateY(-2px);}
+    .action-btn { background:linear-gradient(135deg,#5a67d8 0%,#434190 100%); padding:0.5rem 1rem; border-radius:0.5rem; transition:0.3s; }
+    .action-btn:hover { transform:translateY(-2px); }
   </style>
 </head>
 <body>
   <div class="container mx-auto p-4 md:p-8 max-w-6xl flex-grow">
     <header class="text-center mb-8">
-      <h1 id="mainHeading" class="text-3xl md:text-5xl font-extrabold bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 bg-clip-text text-transparent">Student Results</h1>
-      <p id="collegeName" class="text-gray-400 mt-2 text-md md:text-lg">Dr. Rammanohar Lohia Avadh University, Ayodhya</p>
+      <p id="collegeName" class="text-gray-400 mt-2 text-md md:text-lg"></p>
+      <h2 id="mainHeading" class="text-2xl md:text-3xl font-extrabold bg-gradient-to-r from-blue-400 via-purple-500 to-pink-500 bg-clip-text text-transparent">Student Results</h2>
       <div class="mt-4 text-sm text-gray-400">
         <p>
           Made By <span class="text-green-400 font-bold">RvS</span> | Website Badhiya Lagi! Follow To Banta Hai |
@@ -46,6 +48,16 @@
     </header>
 
     <div class="card p-4 mb-8 flex flex-col md:flex-row gap-4 items-center">
+      <div class="flex flex-col md:flex-row gap-4 w-full md:w-auto mb-4 md:mb-0">
+        <a href="https://realsaanvi.github.io/rmlau/Courses/" 
+   class="action-btn text-white text-center font-medium" 
+   target="_blank">More Sem Results</a>
+
+<a href="http://rmlau.mnopdf.com/" 
+   class="action-btn text-white text-center font-medium" 
+   target="_blank">RMLAU Papers pdf</a>
+
+      </div>
       <div class="relative flex-grow w-full">
         <input type="text" id="searchInput" class="w-full bg-gray-900 border border-gray-600 rounded-lg py-3 px-5 text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-blue-500 text-lg" placeholder="Search by Roll No or Name...">
       </div>
@@ -257,7 +269,9 @@
         const closeModal = document.querySelector(".close");
 
         shareBtn.addEventListener("click", () => {
-          const msg = `${mainHeading.textContent}, Result Declared! Check here: ${window.location.href}`;
+          const collegeName = collegeNameEl.textContent;
+          const headingText = mainHeading.textContent;
+          const msg = `${collegeName}\n\n${headingText}, Rank wise Result Declared! Check here: ${window.location.href}`;
           shareMessage.value = msg;
           shareModal.style.display = "block";
         });
