--- a/Pages/getdata.html
+++ b/Pages/getdata.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Processing Data...</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
-        }
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
     </style>
 </head>
 <body class="flex items-center justify-center min-h-screen bg-gray-100 p-4">
 
     <div id="status-container" class="bg-white p-8 rounded-xl shadow-lg text-center max-w-lg w-full">
         <h1 class="text-3xl font-bold text-gray-800 mb-4">Processing Request</h1>
-        
         <div id="loader" class="mb-4">
             <svg class="animate-spin h-10 w-10 text-blue-500 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
@@ -26,37 +22,69 @@
         </div>
 
         <p id="message" class="text-gray-600">Estimated wait time: <span id="wait-time">a few minutes...</span></p>
-
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const params = new URLSearchParams(window.location.search);
-            const initialUrl = params.get('url');
-            const statusContainer = document.getElementById('status-container');
-            const messageElement = document.getElementById('message');
-            const loaderElement = document.getElementById('loader');
+    document.addEventListener('DOMContentLoaded', () => {
+        const messageElement = document.getElementById('message');
+        const loaderElement = document.getElementById('loader');
 
-            if (!initialUrl) {
-                messageElement.textContent = "Error: URL parameter is missing. Please provide a URL to start the process.";
-                loaderElement.style.display = 'none';
-                return;
-            }
+        const params = new URLSearchParams(window.location.search);
+        const initialUrl = params.get("url"); // browser already decodes it
 
-            // Replace with your backend server URL
-            const backendUrl = 'https://rmlau-rank-wise-result-1069341171195.us-central1.run.app'; 
+        if (!initialUrl) {
+            messageElement.textContent = "Error: URL parameter is missing. Please provide a URL to start the process.";
+            loaderElement.style.display = 'none';
+            return;
+        }
 
-            fetch(`${backendUrl}?url=${encodeURIComponent(initialUrl)}`)
-                .then(response => response.json())
+        const backendUrl = 'https://rmlau-rank-wise-result-1069341171195.us-central1.run.app';
+
+        function tryFetch(innerDecodedUrl) {
+            const encodedForFetch = encodeURIComponent(innerDecodedUrl);
+
+            fetch(`${backendUrl}?url=${encodedForFetch}`)
+                .then(r => r.json())
                 .then(data => {
                     if (data.status === 'success') {
                         messageElement.textContent = "Data processing complete! Redirecting...";
-                        setTimeout(() => {
-                            window.location.href = data.redirect;
-                        }, 2000); 
-                    } else {
-                        messageElement.textContent = `Error: ${data.message}`;
-                        loaderElement.style.display = 'none';
+                        setTimeout(() => { window.location.href = data.redirect; }, 2000);
+                        return;
+                    }
+
+                    messageElement.textContent = `Error: ${data.message}`;
+                    loaderElement.style.display = 'none';
+
+                    const alreadyRetried = sessionStorage.getItem('colRetryDone') === '1';
+
+                    if (!alreadyRetried && data.message.includes("No student data was found")) {
+                        try {
+                            const innerUrlObj = new URL(innerDecodedUrl);
+                            const colParam = innerUrlObj.searchParams.get('Col');
+                            if (colParam) {
+                                const decodedCol = atob(colParam); // e.g. "041"
+                                if (/^0\d+/.test(decodedCol)) {
+                                    const fixedCol = decodedCol.replace(/^0+/, '');
+                                    const newCol = btoa(fixedCol); // "41" -> "NDE="
+                                    innerUrlObj.searchParams.set('Col', newCol);
+
+                                    const newInnerDecoded = innerUrlObj.toString();
+                                    let encodedNewInner = encodeURIComponent(newInnerDecoded);
+
+                                    // brute force fix: ensure %253D → %3D
+                                    encodedNewInner = encodedNewInner.replace(/%253D/g, "%3D");
+
+                                    sessionStorage.setItem('colRetryDone', '1');
+                                    messageElement.textContent = "Retrying with modified Col parameter...";
+
+                                    console.log("Retry URL:", window.location.pathname + "?url=" + encodedNewInner);
+
+                                    window.location.href = window.location.pathname + "?url=" + encodedNewInner;
+                                }
+                            }
+                        } catch (err) {
+                            console.error('Retry processing error:', err);
+                        }
                     }
                 })
                 .catch(error => {
@@ -64,7 +92,10 @@
                     messageElement.textContent = `An unexpected error occurred. Please try again.`;
                     loaderElement.style.display = 'none';
                 });
-        });
+        }
+
+        tryFetch(initialUrl);
+    });
     </script>
 </body>
 </html>
